[tool.poetry]
name = "array_reverse"
version = "0.1.0"
description = ""
authors = ["ManarAbdelkarim <manarbdelkarim434@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.4b2"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.4b2", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
